--- a/style.css
+++ b/style.css
@@ -1,12 +1,4 @@
-ul{
-    
-    font-family: cursive;
-    list-style: none;
-    display: flex;
-    flex-direction:row;
-    justify-content: space-between;
-    
-}
+
 
 h1{
     font-family: cursive;
@@ -26,4 +18,16 @@ body{
     width: 350px;
     padding:50px;
 
+ }
+ header{
+    font-family: cursive;
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+ }
+ header a{
+    color: #ff7f50;
+    text-decoration: none;
  }
