--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ h1{
     text-decoration:underline;
 }
 body{
-    background-color:#00ffff;
+    background-color:#407088;
     color:#ff7f50;
     text-align: center;
         font-family: cursive;
